# correx

./: .gitignore  CLAUDE_CODEX_SETUP.md  CLAUDE_TEMPLATE.md  EXPLANATION.md  LATEST_RESEARCH_2026-03-28.md  LICENSE  NEXT.md  README.md  pyproject.toml
.github/workflows/: test.yml
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx
dashboard/app/(main)/: layout.tsx  page.tsx
dashboard/app/(main)/doctrine/: page.tsx
dashboard/app/(main)/episodes/: page.tsx
dashboard/app/(main)/ghosts/: page.tsx
dashboard/app/(main)/growth/: page.tsx
dashboard/app/(main)/meanings/: page.tsx
dashboard/app/(main)/palace/: page.tsx
dashboard/app/(main)/principles/: page.tsx
dashboard/app/(main)/rules/: page.tsx
dashboard/app/(main)/turns/: page.tsx
dashboard/app/api/memory/: route.ts
dashboard/app/api/profile/: route.ts
dashboard/app/api/promote/: route.ts
dashboard/app/api/rules/: route.ts
dashboard/app/widget/: layout.tsx  page.tsx
dashboard/components/: EntityOrb.tsx  GrowthPlant.tsx  NeuralNet.tsx  Tamagotchi.tsx
dashboard/lib/: maturity.ts  types.ts  useMemory.ts  useTheme.ts
dashboard/public/: manifest.json  sample-data.json
docs/: README_ja.md  SECURITY.md
examples/: basic_usage.py  claude_desktop_config.json  codex_config.toml
scripts/: auto_train.py  chat_adapter.py  cleanup_overfitting.py  export_training_dataset.py  generate_launchd_plist.py  maintenance.py  run_mcp_server.py
src/claude_pseudo_intelligence/: __init__.py  __main__.py  auto_train.py  chat_adapter.py  growth_tracker.py  history_store.py  learning_context.py  llm_scorer.py  mcp_server.py  memory_manager.py  mlx_trainer.py  reaction_scorer.py  rule_builder.py  schemas.py  secret_store.py  service.py  training_dataset.py
src/claude_pseudo_intelligence_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/correx/: __init__.py  __main__.py  analytics.py  auto_train.py  autonomous.py  chat_adapter.py  conversation_learning.py  curiosity_engine.py  dormancy.py  ghost_engine.py  growth_tracker.py  history_store.py  learning_context.py  llm_scorer.py  mcp_server.py  meaning_synthesis.py  memory_manager.py  mlx_trainer.py  narrative_montage.py  personality_layer.py  reaction_scorer.py  rule_builder.py  schemas.py  secret_store.py  service.py  text_similarity.py  training_dataset.py
src/pseudo_intelligence_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_autonomous.py  test_build_guidance_verbose.py  test_curiosity.py  test_dormancy.py  test_journey.py  test_memory_manager.py  test_service.py
