[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correx"
version = "0.1.0"
description = "AI Correction OS — persistent human correction memory that makes AI learn from feedback"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hirokazu Seto"},
]
keywords = [
    "ai", "correction", "memory", "mcp", "llm",
    "preference-learning", "feedback-loop", "lora",
]
dependencies = [
    "mcp[cli]>=1.9.4,<2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ozoz5/correx"
Documentation = "https://github.com/ozoz5/correx#readme"
Repository = "https://github.com/ozoz5/correx"

[project.scripts]
correx = "correx.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.9.4,<2"]
train = ["mlx-lm[train]>=0.13,<1"]
full = ["mcp[cli]>=1.9.4,<2", "mlx-lm[train]>=0.13,<1"]

[tool.setuptools.packages.find]
where = ["src"]
